<resources>
    <string name="app_name">Tags</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="date_created">Date created</string>
    <string name="latitude_coordinate">Latitude coordinate</string>
    <string name="longitude_coordinate">Longitude coordinate</string>
    <string name="model">Model</string>
    <string name="device">Device</string>
    <string name="save">Save</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>

    <string name="select_dialog_title">Select?</string>
    <string name="select_dialog_message">Select %1$s?</string>
    <string name="select_dialog_positive">Select</string>
    <string name="select_dialog_negative">Cancel</string>
</resources>